# TuyaOpen-esp32

./: .gitignore  Kconfig  README.md  build_example.py  build_example.sh  build_setup.py  build_setup.sh  default.config  platform_config.cmake  platform_prepare.py  platform_prepare.sh  toolchain_file.cmake
.github/workflows/: sync-to-gitee.yml
examples/hello_world/: app_default.config
examples/system/os_kv/: app_default.config
tests/: test_invariant_tuya_tools.h
tools/: gen_image.py  idf_tools.py  jihu-mirror.sh  prepare.py  silent_install.py  util.py
tools/esp32/: image_gen.py  sdkconfig.h  toolchain_esp32.cmake
tools/esp32c3/: sdkconfig.h  toolchain_esp32c3.cmake
tools/esp32c6/: toolchain_esp32c6.cmake
tools/esp32p4/: toolchain_esp32p4.cmake
tools/esp32s3/: image_gen.py  sdkconfig.h  toolchain_esp32s3.cmake
tuya_open_sdk/: CMakeLists.txt  partitions.csv  partitions_16M.csv  partitions_32M.csv  partitions_8M.csv  sdkconfig.defaults.esp32p4  sdkconfig_esp32  sdkconfig_esp32c3  sdkconfig_esp32c6  sdkconfig_esp32p4_c6  sdkconfig_esp32s3  sdkconfig_esp32s3_uart  sdkconfig_esp32s3_usb_jtag
tuya_open_sdk/components/: README.md  partitions.csv
tuya_open_sdk/components/bsp_pwm/: CMakeLists.txt  bsp_pwm.c  bsp_pwm.h  bsp_pwm_app.c
tuya_open_sdk/components/ethernet_init/: Kconfig.projbuild  ethernet_init.c
tuya_open_sdk/components/ethw5500/: CMakeLists.txt  README.md  ethw5500.c  ethw5500.h
tuya_open_sdk/main/: CMakeLists.txt  idf_component.yml  main.c
tuya_open_sdk/tuyaos_adapter/: CMakeLists.txt
tuya_open_sdk/tuyaos_adapter/include/asr/: tkl_asr.h
tuya_open_sdk/tuyaos_adapter/include/atomic/: tkl_atomic.h
tuya_open_sdk/tuyaos_adapter/include/dma2d/: tkl_dma2d.h
tuya_open_sdk/tuyaos_adapter/include/esp32s3Pwm/: tkl_esp32s3Pwm.h
tuya_open_sdk/tuyaos_adapter/include/i2c/: tkl_i2c.h
tuya_open_sdk/tuyaos_adapter/include/i2s/: tkl_i2s.h  tkl_i2s_watcher.h
tuya_open_sdk/tuyaos_adapter/include/init/include/: tkl_init_system.h  tkl_init_wifi.h  tkl_init_wired.h
tuya_open_sdk/tuyaos_adapter/include/init/src/: tkl_init_wired.c
tuya_open_sdk/tuyaos_adapter/include/kws/: tkl_kws.h
tuya_open_sdk/tuyaos_adapter/include/media/: audio_afe.h  tkl_audio.h  tkl_isp.h  tkl_video_enc.h.bak  tkl_video_in.h
tuya_open_sdk/tuyaos_adapter/include/network/: tkl_network.h
tuya_open_sdk/tuyaos_adapter/include/spi/: tkl_spi.h
tuya_open_sdk/tuyaos_adapter/include/system/: tkl_fs.h  tkl_memory.h  tkl_task_notify.h  tkl_thread.h
tuya_open_sdk/tuyaos_adapter/include/utilities/include/: tuya_cloud_types.h  tuya_ringbuf.h  tuya_slist.h  tuya_tools.h
tuya_open_sdk/tuyaos_adapter/include/utilities/src/: tuya_ringbuf.c  tuya_tools.c
tuya_open_sdk/tuyaos_adapter/include/vad/: tkl_vad.h  ty_vad_app.h
tuya_open_sdk/tuyaos_adapter/include/vad/lib/: vad.h  wb_vad_c.h
tuya_open_sdk/tuyaos_adapter/include/wifi/: tkl_wifi.h
tuya_open_sdk/tuyaos_adapter/include/wired/: tkl_wired.h
tuya_open_sdk/tuyaos_adapter/src/audio/: audio_afe.c  tkl_asr.c  tkl_kws.c  tkl_vad.c
tuya_open_sdk/tuyaos_adapter/src/drivers/: tkl_adc.c  tkl_audio.c  tkl_bt.c  tkl_dma2d.c  tkl_esp32s3Pwm.c  tkl_flash.c  tkl_i2c.c  tkl_i2s.c  tkl_i2s_watcher.c  tkl_network.c  tkl_ota.c  tkl_pin.c  tkl_pinmux.c  tkl_pwm.c  tkl_rtc.c  tkl_spi.c  tkl_timer.c  tkl_uart.c  tkl_video_in.c  tkl_watchdog.c  tkl_wifi.c  tkl_wired.c
tuya_open_sdk/tuyaos_adapter/src/misc/: ty_vad_app.c
tuya_open_sdk/tuyaos_adapter/src/system/: tkl_atomic.c  tkl_fs.c  tkl_memory.c  tkl_mutex.c  tkl_output.c  tkl_queue.c  tkl_semaphore.c  tkl_sleep.c  tkl_system.c  tkl_task_notify.c  tkl_thread.c
